--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-beautifulsoup4
-matplotlib
-pandas
-Requests
-seaborn
-setuptools
-streamlit
+branca==0.7.2
+folium==0.17.0
+geopandas==0.14.4
+matplotlib==3.9.0
+pandas==2.2.2
+plotly_express==0.4.1
+seaborn==0.13.2
+streamlit==1.35.0
