add local package to requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ geopandas
 pandas
 plotly_express
 streamlit
+property_price_dashboard @ git+https://github.com/matthiasrankin/property-price-dashboard.git@master
