--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ geopandas==0.14.4
 pandas==2.2.2
 plotly_express==0.4.1
 streamlit==1.35.0
+openpyxl
 property_price_dashboard @ git+https://github.com/matthiasrankin/property-price-dashboard.git@master
