--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-geopandas==0.14.4
+matplotlib==3.9.0
+numpy==2.0.0
 pandas==2.2.2
 plotly_express==0.4.1
+seaborn==0.13.2
 streamlit==1.35.0
 openpyxl
 property_price_dashboard @ git+https://github.com/matthiasrankin/property-price-dashboard.git@master
